Add option to include infinileap-binding into build